# badminton-analysis

./: .gitignore  Inferencing_Pose_Detection_2026_05_09.ipynb  main.py  movement.py  movement_feature_extraction.ipynb  pyproject.toml  tracker.py
static/: app.js  index.html  style.css
temp_exports/: output.csv  output.json
